--- a/SUPERSTOREAPP/deploy.yml
+++ b/SUPERSTOREAPP/deploy.yml
@@ -70,4 +70,4 @@
     register: html_contents
   - name: check for string in html
     when: html_contents.stdout.find('hello') != -1
-    debug: msg="success!!"
+    debug: msg="Success!!"
